Introduction of DbAdapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity
             android:name=".GameDetailActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".PlatformDetailActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
